11/6/13 set up basic framework for 'Solutions' and 'Custom' screens
11/6/13 created repo