@@ -1,0 +1,13 @@
+// Copyright 2002-2013, University of Colorado Boulder
+
+define( function( require ) {
+  'use strict';
+
+  // imports
+  var Range = require( 'DOT/Range' );
+
+  return {
+    PH_RANGE: new Range( -1, 15, 7 ),
+    MAX_SOLUTION_VOLUME: 1.2 // L
+  };
+} );
