@@ -1,0 +1,12 @@
+// Copyright 2002-2013, University of Colorado Boulder
+
+//TODO move to 'dot'
+define( function( require ) {
+  'use strict';
+
+  return {
+    log10: function( val ) {
+      return Math.log( val ) / Math.LN10;
+    }
+  };
+} );
