@@ -1,2 +1,3 @@
+11/8/13 Solute, Solvent, Solution model elements
 11/6/13 set up basic framework for 'Solutions' and 'Custom' screens
 11/6/13 created repo
